# uczenie_maszyn

./: CONFIG.py  datasets_init.py  main.py  pyproject.toml  readme.md  requirements.txt
data_logic/: download_datasets.py  preprocess_datasets.py  process_results.py
datasets/: data_load.py  datasets_init.py  graph_draw.py
learning_data/dataset3/: readme.txt
model/: CONFIG.py  Model.py  autoencoder.py  data_load.py  iso_forest.py  oc_svm.py
results/: wyniki_analizy.csv
