[project]
name = "um"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "certifi==2026.1.4",
    "charset-normalizer==3.4.4",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "filelock==3.20.0",
    "fonttools==4.61.1",
    "fsspec==2025.10.0",
    "idna==3.11",
    "jinja2==3.1.6",
    "joblib==1.5.2",
    "kagglehub==0.4.0",
    "kiwisolver==1.4.9",
    "markupsafe==3.0.3",
    "matplotlib==3.10.8",
    "mpmath==1.3.0",
    "networkx==3.5",
    "numpy==2.3.4",
    "packaging==25.0",
    "pandas==2.3.3",
    "pillow==12.0.0",
    "pyparsing==3.3.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "ruff==0.14.6",
    "scikit-learn==1.7.2",
    "scipy==1.16.3",
    "seaborn==0.13.2",
    "setuptools==80.9.0",
    "six==1.17.0",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "torch==2.9.0",
    "torchvision==0.24.0",
    "tqdm==4.67.1",
    "typing-extensions==4.15.0",
    "tzdata==2025.3",
    "urllib3==2.6.2",
]
